--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "2domain",
-  "version": "2.2.11",
+  "name": "@vizkits/parsedomain",
+  "version": "1.0.0",
   "description": "Splits an url into sub-domain, domain and effective top-level-domain",
   "main": "./lib/parseDomain.js",
   "scripts": {
@@ -23,7 +23,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/7c/2domain.git"
+    "url": "https://github.com/vizkits/parsedomain.git"
   },
   "dependencies": {
     "chai": "^4.1.2",
